
bin_PROGRAMS  = uplogd uplogger
uplogd_SOURCES = uplogd.c uplog_util.c \
                uplog_common.h uplog_util.h uplogd.h

uplogger_SOURCES = uplogger_cmd.c uplogger.c uplog_util.c \
                  uplog_common.h uplogger.h uplog_util.h

lib_LIBRARIES = libuplogger.a
libuplogger_a_SOURCES = uplogger.c uplogger.h uplog_util.h uplog_common.h

